Fri Dec 30 13:30:28 EST 2005	JK Lowden <jklowden@schemamania.org>
	* doc/htdoc/faq.html HTML cleanup

Thu Dec 29 11:23:50 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* vms/config_h.vms vms/configure.com vms/descrip_mms.template:
	* vms/getpass.c:
	- applied Craig A. Berry patch for VMS

Fri Dec 23 15:15:40 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/token.c: prevent possible core with bad reply

Wed Dec 21 15:01:29 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* include/Makefile.am src/replacements/Makefile.am:
	- fix distribution of replacement.h
	* src/tds/util.c: fix problem for some old compiler

Wed Dec 21 09:13:40 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/locale.c: parse LANG environment

Wed Dec 21 09:11:50 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* include/ctlib.h src/ctlib/ct.c:
	- use scale/precision informations from CS_DATAFMT

Wed Dec 21 09:05:30 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* include/replacements/readpassphrase.h(added):
	* src/replacements/readpassphrase.h(removed):
	* src/replacements/readpassphrase.c include/replacements.h:
	- moved readpassphrase.h in include/replacements

Wed Dec 14 11:04:43 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/ct.c: fix core and CS_NULLTERM

Mon Dec 12 17:09:25 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/ct.c: more verbose
	* src/tds/mem.c: additional check for params

Sun Dec 11 10:58:03 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/apps/tsql.c: small fixes

Sat Dec 10 18:13:13 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* doc/tds_ssl.html: small update

Fri Dec 09 19:02:28 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/token.c:
	- add TDS_TOKEN_RES_MSG results to tds_process_tokens

Fri Dec  9 12:05:37 EST 2005	JK Lowden <jklowden@schemamania.org>
	* src/apps/bsqldb.c accept -d as database option